# zoo

./: .gitignore  LICENSE  README.md  pyproject.toml  zoo-project.json
docs/raw/: 0000__project-format.json  0001__conversation-locations.txt  0002__storage-and-indexing.json  0003__zoo-modernization-design-note.json  0004__linking-external-systems-before-m1.json
scripts/: 0000__one-time-port-legacy-projects.py  0001__create-table-and-sidecar-files.py
src/zoo/: INBOX.txt  MARK.json  cli.py  go.py  gui.py  guiutil.py  index.txt  links.py  listdict.py  menubar.py  paths.py  proj.py  projwin.py  searchwin.py  symbols.py  util.py
