[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoo"
version = "0.1.0"
description = "Browse and edit Zoo projects"
requires-python = ">=3.10"
authors = [
    {name = "Lion Kimbro"}
]
license = {text = "CC0-1.0"}
readme = "README.md"
dependencies = [
    "lionscliapp>=0.1.2",
    "machine-root"
]

[project.scripts]
zoo = "zoo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
